# merge-mp4

./: Cargo.toml  Dioxus.toml  README.md  deny.toml
.cargo/: config.toml
assets/: main.css  tailwind.css
src/: config.rs  guide_router.rs  main.rs
src/components/: about_footer.rs  file_list.rs  mod.rs  mp4_info.rs  mp4_info_loading.rs  mp4_info_table.rs  mp4_merger.rs  output_settings.rs
src/components/button/: component.rs
src/components/input/: component.rs  style.css
src/components/progress/: style.css
src/components/tabs/: component.rs  style.css
src/components/toast/: style.css
src/ffmpeg/: merge_mp4.rs  mod.rs
src/utils/: duration.rs  format_size.rs  mod.rs  mp4.rs
