[package]
name = "merge-mp4"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["朝阳 3266420686@qq.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
dioxus-desktop = "0.7.3"
tokio = { version = "1", features = ["full"] }
rfd = "0.17.2"
futures-util = "0.3.31"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
regex = "1.12.2"
tempfile = "3.24.0"
which = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
bundle = []
